# ChangeLog for dev-python/django-guardian
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  16 Aug 2015; Johann Schmitz <ercpe@gentoo.org> django-guardian-1.2.4.ebuild:
  dev-python/django-guardian: Updated ebuild headers to match new $Id$ line

  06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  dev-python/django-guardian: Add github to remote-id in metadata.xml

*django-guardian-1.2.4 (30 Dec 2014)

  30 Dec 2014; Johann Schmitz <ercpe@gentoo.org> +django-guardian-1.2.4.ebuild,
  +metadata.xml:
  Added ebuild for django-guardian