@@ -1,1 +1,2 @@
 DIST django-guardian-1.2.4.tar.gz 344765 SHA256 bad7f4178f501c8d1dae75080b2547e8ae8b4d0552045b9ef8d4d89a0a1d38f2 SHA512 353f0d4c55baf5029c9b570df359669af2f2468d7e3be59802b28a1e8555fb0ecfc7ab79e1c0f66b78658b63f611165d143522e28615b4f0901ef97266fce9c1 WHIRLPOOL f4ddfc027add6e3430755b1b5a6236525a00f6188cadee39ca7a1f3f9001de429e710e4534c213a2c2bf8e69ce3b9d228a9288909a08b64d9fa9f02c5dc41987
+DIST django-guardian-1.3.tar.gz 351315 SHA256 0af4df48b4e457e0801680ddf0883dd477ae54370f743d1034365747dbd56b80 SHA512 063cbf5d2c33c3268e94d76b84dee3752cb2874d7e5f9c5a4601686feb63939cc0a9629218bb344b7647abbb76de7f8c26a22c9b329ad80b036583a8432c649e WHIRLPOOL 2a7eeddf6adc1df15d6735db6e91788861019dfb02cede88c4f569b8292416bbcc4d599b1a1d8968a3fd8db0199bbda7c5788d3933a92369b9b677a85b248728
