@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*django-guardian-1.3 (06 Dec 2015)
+
+  06 Dec 2015; Johann Schmitz <ercpe@gentoo.org> +django-guardian-1.3.ebuild:
+  dev-python/django-guardian: Version bump to 1.3
+
   16 Aug 2015; Johann Schmitz <ercpe@gentoo.org> django-guardian-1.2.4.ebuild:
   dev-python/django-guardian: Updated ebuild headers to match new $Id$ line
 
